# voxelengine

./: .gitignore  CMakeLists.txt  README.md  ROADMAP.md  imgui.ini
.github/prompts/: voxel_constitution.prompt.md
config/: blocks.toml  settings.toml
include/Client/: BlockRaycast.hpp  Camera.hpp  ChunkMesh.hpp  ImGuiDebugOverlay.hpp  Logger.hpp  MeshGenerator.hpp  MeshTaskQueue.hpp  PackedVertex.hpp  Renderer.hpp  Shader.hpp  TextureManager.hpp  Window.hpp
include/Server/: FluidSimulator.hpp  GeneratorRegistry.hpp  TickManager.hpp  World.hpp  WorldGenerator.hpp
include/Shared/: BlockRegistry.hpp  Chunk.hpp  Collision.hpp  Memory.hpp  Raycast.hpp  Settings.hpp  ThreadPool.hpp  Types.hpp
src/Client/: CMakeLists.txt  Camera.cpp  MeshGenerator.cpp  Renderer.cpp  Shader.cpp  Window.cpp  client_stub.cpp  main.cpp  main_debug.cpp
src/Server/: CMakeLists.txt  World.cpp  WorldGenerator.cpp  server_stub.cpp
src/Shared/: CMakeLists.txt
